@@ -5,12 +5,12 @@ use warnings;
 
 use Test::Most;
 
-if(not $ENV{RELEASE_TESTING}) {
+if(not $ENV{AUTHOR_TESTING}) {
 	plan(skip_all => 'Author tests not required for installation');
 }
 
 eval "use Test::Vars";
 
-plan skip_all => "Test::Vars required for detecting unused variables" if $@;
+plan(skip_all => 'Test::Vars required for detecting unused variables')if $@;
 
 all_vars_ok(ignore_vars => { '$self' => 0 });
