@@ -2,6 +2,7 @@ Revision history for Class::Simple::Readonly::Cached
 
 0.04
 	Object shouldn't be instantiated if cache argument is not given
+	Improved handling of scalar then array call on same method
 
 0.03	Sun Sep 29 05:12:19 PDT 2019
 	Added the object() method
